# mathgenapi

./: .gitignore  main.py  makefile  pyproject.toml
src/: api.py  config.py  db.py  models.py  responses.py  utils.py
