[tool.poetry]
name = "mathgenapi"
version = "0.1.0"
description = ""
authors = ["ShanThatos <shanthkoka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mathgen = {git = "https://github.com/ShanThatos/mathgen.git"}
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
black = "^23.9.1"
python-dotenv = "^1.0.0"
itsdangerous = "^2.1.2"
psutil = "^5.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
